samples/_failures_safe/1761207269_762890_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74db65d8.c: In function ‘main’:
./samples/SAFE/__tmp_74db65d8.c:161:9: error: expected expression at end of input
  161 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_74db65d8.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74db65d8.c:161:9: error: expected declaration or statement at end of input
